# langchain_chatbot

./: .gitignore  Makefile  TODOs.md  pyproject.toml  tox.ini
inputs/: octopus_urls
jupyter/: chatbot.ipynb
src/LlamaParseUser/: composed_chatbot.py  main.py  octopus_bot_from_webpage.py  qabot.py  scrap_urls.py
src/LlamaParseUser/standalone/: dftb_chatbot.py
tests/: dftbplus.yml
